Objects/Animal__c/fields/Eats__c.field-meta.xml
<CustomField>
    <fullName>Eats__c</fullName>
    <label>Eats</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>