Objects/Animal__c/fields/Says__c.field-meta.xml
<CustomField>
    <fullName>Says__c</fullName>
    <label>Says</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>