Objects/Animal__c/fields/webServiceID__c.field-meta.xml
<CustomField>
    <fullName>webServiceID__c</fullName>
    <label>webServiceID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>